--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -13,14 +13,14 @@
     </div>
     <div class="row mt-0">
         <div class="col  text-left">
-            <div class="title-com title-sub">Year/Sem  :   </div>
-            <div class="title-com title-sub">Subject   :  </div>
-            <div class="title-com title-sub">Subject Code  :  </div>
+            <div class="title-com title-sub">Year/Sem  :   E3/SEM 2</div>
+            <div class="title-com title-sub">Subject   :  OOAD</div>
+            <div class="title-com title-sub">Subject Code  :  CS3109</div>
         </div>
         <div class="col">
-            <div class="title-com title-sub2">Date :   </div>
-            <div class="title-com title-sub2">Time :  Hours </div>
-            <div class="title-com title-sub2">Max. Marks  :  </div>
+            <div class="title-com title-sub2">Date :   01-08-2021</div>
+            <div class="title-com title-sub2">Time : 2 Hours </div>
+            <div class="title-com title-sub2">Max. Marks  :  40</div>
         </div>
     </div>
     <hr class="line"/>
