--- a/src/app/qinput/qinput.component.html
+++ b/src/app/qinput/qinput.component.html
@@ -1,17 +1,51 @@
-<div class="container">
-    <div class="card mt-3">
+<div class="container" *ngIf="i==1">
+    <div class="card mt-1">
         <div class="card-header bg-dark text-light text-center font-weight-bold">
             <h4>Question Maker</h4>
         </div>
         <div class="card-body">
             <div class="form-group" *ngFor="let j of ques;let i = index;">
                 <label for="q">Enter Question {{i+1}}</label>
-                <input type="text" class="form-control" [(ngModel)]="ans[i]" placeholder="Enter Question No {{i+1}}">
-                {{ans[i]}}
+                <input type="text" class="form-control" [(ngModel)]="ans[i]" placeholder="Enter Question No {{i+1}}" required>
             </div>
         </div>
         <div class="card-footer bg-dark text-center">
-            <button class="btn btn-primary">Submit</button>
+            <button class="btn btn-primary" (click)="submitVal()">Submit</button>
         </div>
     </div>
+</div>
+
+
+<div class="container border border-secondary mt-5" *ngIf="i==0">
+    <button class="btn btn-info text-center mt-5 ml-5" (click)="printPaper()">Print Paper</button>
+    <div class="row m-3 mt-5">
+        <div class="col-md-1 logo">
+            <img src="assets/img/logo.jpg" alt="logo"width="100" height="120"/>
+        </div>
+        <div class="col">
+            <div class="title text-center mt-2">Rajiv Gandhi University Of Knowledge Technologies- Srikakulam</div>
+            <div class="title-com text-center">Department of Computer Science Engineering</div>
+            <div class="title-com text-center">E3 SEM1_Mid 1, AY 2020-2021(July - 21) </div>
+        </div>
+    </div>
+    <div class="row mt-0">
+        <div class="col  text-left">
+            <div class="title-com title-sub">Year/Sem  :   E3/SEM 2</div>
+            <div class="title-com title-sub">Subject   :  OOAD</div>
+            <div class="title-com title-sub">Subject Code  :  CS3109</div>
+        </div>
+        <div class="col">
+            <div class="title-com title-sub2">Date :   01-08-2021</div>
+            <div class="title-com title-sub2">Time : 2 Hours </div>
+            <div class="title-com title-sub2">Max. Marks  :  40</div>
+        </div>
+    </div>
+    <hr class="line"/>
+    <div class="title-com mb-2 text-center">Answer any FOUR of the following questions. Each question carries TEN
+marks. (4 X 10 = 40 M)</div>
+            <div class="question-main row m-2" *ngFor="let item of ans; let i = index">
+                <div class="question-num col-sm-1 font-weight-bold">{{(i+1)+"."}}</div>
+                <div class="question col text-left">{{item + " ( 10M ) "}}</div>
+            </div>
+    <div class="mt-5"></div>
 </div>
